--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon --exec ts-node src/index.ts"
+        "start": "nodemon -r tsconfig-paths/register --exec ts-node src/index.ts"
     },
     "keywords": [],
     "author": "",
@@ -16,15 +16,15 @@
     "devDependencies": {
         "@types/express": "^4.17.21",
         "@types/node": "^20.11.5",
-        "nodemon": "^3.0.3",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.3.3",
-        "tsconfig-paths": "^4.2.0",
-        "prettier": "^3.2.4",
         "@typescript-eslint/eslint-plugin": "^6.19.0",
         "@typescript-eslint/parser": "^6.19.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3"
+        "eslint-plugin-prettier": "^5.1.3",
+        "nodemon": "^3.0.3",
+        "prettier": "^3.2.4",
+        "ts-node": "^10.9.2",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.3.3"
     }
 }
